<resources>
    <string name="app_name">Homy</string>

    <string-array name="str_title">
        <item>首页</item>
        <item>发现</item>
        <item>发布</item>
        <item>社区</item>
        <item>个人</item>
    </string-array>

    <string name="str_need_type">需求类型:</string>
    <string name="str_call_number">联系方式:</string>
    <string name="str_need_pay">所需酬劳:</string>
    <string name="str_price">Price：</string>
    <string name="ic_price">￥</string>
    <string name="str_credit">信誉度：</string>
    <string name="str_start_time">发起时间:</string>
    <string name="str_filter">筛选</string>

    <!--发布需求-->
    <string name="str_end_time">结束时间:</string>
    <string name="str_publish">发布</string>
    <string name="str_hint_number">请输入你的手机号码...</string>
    <string name="str_hint_pay">请输入酬劳...</string>
    <string name="str_hint_need">请输入需求详情...</string>



    <string-array name="need_type_arr">
        <item>跑腿</item>
        <item>代购</item>
        <item>代课</item>
    </string-array>

    <!--社区-->
    <string name="str_date">1月2日</string>
    <string name="str_name">Lizheng</string>
    <string name="str_reply">请输入你的回复</string>
    <string name="str_sum">260</string>
    <string name="str_content">God say:There was light,It was light</string>
    <string name="str_content_comment">god say it was very good.</string>
    <string name="str_accept">接单</string>
    <!--社区心情-->
    <string name="str_publish_feeling">输入你的感想...</string>
    <!--社区评论-->
    <string name="str_hint_comment">添加评论...</string>
    <string name="str_yes">确定</string>
    <string name="str_no">取消</string>
    <string name="str_reply_name">回复：Lizheng</string>

    <!--个人中心-->
    <string name="str_nick_name">昵称</string>
    <string name="str_gender">性别</string>
    <string name="str_reputation">信誉</string>
    <string name="str_write_message">个人信息</string>
    <string name="str_my_demand">我的需求</string>
    <string name="str_my_order">我的订单</string>
    <string name="str_my_phone">我的手机</string>
    <string name="str_install">设置</string>
    <string name="str_about_us">关于我们</string>
    <string name="str_msg_phone">解绑手机>>>>>>></string>
    <!--注册界面-->
    <string name="str_text">让帮助成为你大学生活的一种娱乐</string>>
    <string name="str_hint_name">请输入你的昵称...</string>
    <string name="str_hint_gender">请输入你的性别</string>
    <string name="str_hint_password">请设置你的密码...</string>
    <string name="str_hint_password_again">再次输入你的密码...</string>
    <string name="str_hint_phone">请输入你的手机号码...</string>
    <string name="str_hint_verification_Code">请输入你的验证码...</string>
    <string name="str_hint_get_verification_Code">获取验证码</string>
    <string name="str_hint_register">注册</string>
    <string name="str_hint_login">登陆</string>
    <string name="str_drop_out">退出登录</string>
    <string name="str_gender_male">男</string>
    <string name="str_gender_female">女</string>
    <string name="str_go_login">已有账号，去登陆</string>
    <!--登陆界面-->
    <string name="str_login_wechat">使用微信登陆:</string>
    <string name="str_login_qq">使用QQ登陆:</string>
    <string name="str_login_register">没有Hemy账号？点击注册</string>
    <!--我的需求界面-->
    <string name="str_demand_type">类型 :</string>
    <string name="str_demand_start_time">start :</string>
    <string name="str_demand_end_time">end :</string>
    <string name="str_demand_price">Price :</string>
    <string name="str_land_wechat">使用微信登陆:</string>
    <string name="str_land_qq">使用QQ登陆:</string>
    <string name="str_land_register">没有Hemy账号？点击注册</string>
    <!--我的手机界面-->
    <string name="str_phone_bindings_number">已绑定的手机号码:</string>
    <string name="str_phone_finish">完成</string>

    <!--聊天界面-->
    <string name="str_chat_et_hint">输入</string>
    <string name="str_btn_send">发送</string>

    <!--加载出错界面-->
    <string name="str_err_text">加载出错了!!!</string>
    <string name="str_err_reload">重新加载</string>
</resources>
