<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorTextWhite"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_bar_layout"/>
    <RelativeLayout
        android:layout_marginTop="@dimen/space_xxl"
        android:layout_marginLeft="@dimen/space_xxl"
        android:layout_marginRight="@dimen/space_xxl"
        android:background="@color/colorTextWhite"
        style="@style/fragment_register">
        <ImageView
            android:src="@mipmap/ic_launcher_head"
            style="@style/fragment_register_image"/>
        <LinearLayout
            android:background="@drawable/edit_text_bg"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/et_name_msg"
                android:hint="@string/app_name"
                android:inputType="textPhonetic"
                style="@style/fragment_register_edit_text" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:background="@color/colorTextWhite"
        android:layout_marginLeft="@dimen/space_xxl"
        android:layout_marginRight="@dimen/space_xxl"
        style="@style/fragment_register">
        <ImageView
            android:src="@mipmap/ic_sex"
            style="@style/fragment_register_image"/>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/rd_msg"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_marginRight="@dimen/space_xl"
                    android:text="@string/str_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/rb_female"
                    android:text="@string/str_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_finish_phone"
        android:layout_marginTop="@dimen/space_xxxxl"
        android:text="@string/str_phone_finish"
        style="@style/global_bt_style" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ts_remove_phone"
            android:layout_marginRight="@dimen/space_xl"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/space_l"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/str_msg_phone" />
    </RelativeLayout>



</LinearLayout>