<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/space_l"
    android:layout_marginBottom="@dimen/space_m"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        app:cardElevation="@dimen/space_xs"
        app:cardCornerRadius="@dimen/space_xxs"
        android:layout_marginTop="@dimen/space_l"
        android:layout_marginRight="@dimen/space_m"
        android:layout_marginLeft="@dimen/space_m"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_xxxxxl">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginBottom="@dimen/space_xs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_marginLeft="@dimen/space_l"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                   style="@style/fragment_my_demand">
                    <TextView
                        android:text="@string/str_demand_type"
                       style="@style/fragment_my_demand_text_view" />
                    <TextView
                        android:id="@+id/text_type"
                        android:text="@string/app_name"
                        style="@style/fragment_my_demand_text_view" />

                </LinearLayout>
                <LinearLayout
                    android:layout_marginRight="@dimen/space_l"
                    style="@style/fragment_my_demand">
                    <TextView
                        android:id="@+id/text_finish"
                        android:text="@string/app_name"
                        style="@style/fragment_my_demand_text_view" />
                    <ImageView
                        android:id="@+id/un_finish"
                        android:src="@mipmap/ic_launcher_arrow_right"
                        android:layout_marginRight="@dimen/space_xxs"
                        android:layout_marginLeft="@dimen/space_s"
                       style="@style/fragment_my_demand_image" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                style="@style/fragment_my_demand">
                <ImageView

                    style="@style/fragment_my_demand_image" />
                <TextView
                    android:text="@string/str_start_time"
                    style="@style/fragment_my_demand_text_view" />
                <TextView
                    android:id="@+id/text_start_time"
                    android:text="@string/app_name"
                    style="@style/fragment_my_demand_text_view" />
            </LinearLayout>
            <LinearLayout
                style="@style/fragment_my_demand">
                <ImageView
                    style="@style/fragment_my_demand_image" />
                <TextView
                    android:text="@string/str_demand_end_time"
                    style="@style/fragment_my_demand_text_view" />
                <TextView
                    android:id="@+id/text_end_time"
                    android:text="@string/app_name"
                    style="@style/fragment_my_demand_text_view" />
            </LinearLayout>
            <LinearLayout
                style="@style/fragment_my_demand">
                <ImageView
                    style="@style/fragment_my_demand_image" />
                <TextView
                    android:text="@string/str_demand_price"
                    style="@style/fragment_my_demand_text_view" />
                <TextView
                    android:id="@+id/text_price"
                    android:text="@string/app_name"
                    style="@style/fragment_my_demand_text_view" />
            </LinearLayout>
        </LinearLayout>



    </android.support.v7.widget.CardView>



</android.support.constraint.ConstraintLayout>



